# shoebill

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PRE_COMMIT_SETUP.md  README.md  Table Submit.ipynb  is_cat.htpy  is_cat.py  parse.py  pyproject.toml
backlog/: config.yml
backlog/tasks/: task-1 - Add-self-submitting-notebook-hooks.md  task-2 - Unit-tests.md  task-2.1 - Add-pre-commit-hooks-that-run-linting-(via-ruff)-and-run-the-unit-tests.md
tests/: README.md  conftest.py  test_parse_htcss_file.py  test_parse_htcss_string.py  test_read_comments.py  test_submission_flow.py
tests/fixtures/: sample_script.py  simple.htpy  with_container.htpy  with_exec.htpy
