[project]
name = "htcondor-python-bindings-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "htcondor>=24.3.0",
    "jupyter>=1.1.1",
    "ruff>=0.8.6",
]

[tool.uv.workspace]
members = ["place_joblist"]
